# opti-jax

./: LICENSE.txt  README.md  pyproject.toml
notebooks/: 1951usaf_test_target.tif  dpc_example.ipynb  dpc_vp_example.ipynb  fpty_example.ipynb  zstack_example.ipynb  zstack_vp_example.ipynb
opti_jax/: optics.py  optics_dpc.py  optics_fpty.py  optics_zstack.py  ptylab_io.py  util.py  zernike.py
opti_jax/notebooks/: fpty_example.ipynb
