[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opti_jax"
version = "0.1"
dependencies = []
requires-python = ">=3.10"
authors = []
maintainers = []
description = "A Python module for (scalar) optics using JAX."
keywords = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

[tool.setuptools]
packages = ["opti_jax"]
